--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -3,10 +3,8 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">100.78.149.91</domain>
         <domain includeSubdomains="true">100.97.27.128</domain>
+        <domain includeSubdomains="true">100.70.215.39</domain>
         <domain includeSubdomains="true">10.0.2.2</domain>
-        <domain includeSubdomains="true">192.168.0.0/16</domain>
-        <domain includeSubdomains="true">172.16.0.0/12</domain>
-        <domain includeSubdomains="true">10.0.0.0/8</domain>
 
     </domain-config>
 </network-security-config>
